# pypi-xmlrpc.py

./: .codeclimate.yml  .coveragerc  .gitignore  .open pypi.python:$name  .scrutinizer.yml  .travis.yml  MANIFEST  MANIFEST.in  README.md  README.rst  description.txt  requirements.txt  setup.cfg  setup.py  shippable.yml  tox.ini  wercker.yml
.Tests/: README.md  clone.sh  config.sh  description  export.sh  install.sh  requirements.sh  requirements.txt  run.sh
.setup/: .classifiers.py  .data_files.py  .dependency_links.py  .description.py  .entry_points.py  .keywords.py  .long_description.py  .name.py  .packages.py  .platforms.py  .py_modules.py  .scripts.py  .scripts.txt  .setuptools.dependency_links.py  .setuptools.entry_points.py  .setuptools.install_requires.py  .url.py  .version.py  __init__.py  __setup__.py  develop.command  install.command  pypi.python.org.command  register.command  upload.command
README/: usage.md  usage.rst
Tests/: install.sh  run.sh
WEBLOC/: PyPiXmlRpc - PythonInfo Wiki.webloc
py_modules/: pypixmlrpc.py
pypi_xmlrpc/: __init__.py
setup/: .classifiers.py  .install_requires.py  .keywords.py  .long_description.py  .packages.py  .platforms.py  .pypi.command  .setup.py develop.command  .setup.py install.command  .setup.py install_lib.command  .setup.py register.command  .setup.py sdist upload.command  .version.py  (+3 more)
setup.py/: .author.py  .bugtrack_url.py  .classifiers.py  .dependency_links.py  .description.py  .entry_points.py  .packages.py  .py_modules.py  .scripts.py  .setup.py register.command  .url.py  __init__.py  __main__.py
(+58 files in other folders)
