[metadata]
name = pypi-xmlrpc
version = 2018.11.20
url = https://github.com/looking-for-a-job/pypi-xmlrpc.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: pypi.md
long_description_content_type = text/markdown
keywords = pypi xmlrpc

[options]
install_requires = 
	Click
	public
	setuptools
packages = 
	pypi_xmlrpc
