# https://pypi.org/project/setupcfg-generator/
[metadata]
name = pypi-xmlrpc
version = 2019.3.22
url = https://github.com/looking-for-a-job/pypi-xmlrpc.py
classifiers = file: classifiers.txt
description = file: description.txt
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pypi xmlrpc

[options]
install_requires = 
	click
	public
	setuptools
packages = 
	pypi_xmlrpc
